syntax = "proto3";

package messages;

option go_package = "messages";

service SubscriptionService {
  rpc SubscribePod(PodContainerLogRequest) returns (SubscriptionResponse) {}
}


// only use in SubscribePod for subscribing a pod container logs
message PodContainerLogRequest {
    // target is the cluster name
    string Target = 1;
    string PodName = 2;
    string ContainerName = 3;
    int64 TailLines = 4;
}


message SubscriptionResponse {
    string type = 1;
    bool success = 2;
    string reason = 4;
}

message SubscriptionRequest {
    PodContainerLogRequest podContainerLogRequest = 2;
}
